# SM4_SIMD

./: CMakeLists.txt  speed_test.txt  test.txt
include/: AVX_SM4.h  AVX_SM4_BS.h  SM4_BS.h  SM4_BS_256.h  util.h
src/: AVX_SM4.cpp  AVX_SM4_BS.cpp  SM4_BS.cpp  SM4_BS_256.c  SM4_BS_256.cpp  bs.cpp  util.c
test/: AVX_SM4_TEST.c  AVX_SM4_TEST.cpp
